--- a/src/public/assets/frontend/css/main.css
+++ b/src/public/assets/frontend/css/main.css
@@ -240,9 +240,9 @@ a#scrollUp i{
 
 .mainmenu ul li a {
 	color: #696763;
-	font-family: 'Roboto', sans-serif;
-	font-size: 17px;
-	font-weight: 300;
+	font-family: sans-serif;
+	font-size: 18px;
+	font-weight: bold;
 	padding: 0;
 	padding-bottom: 10px;
 }
@@ -294,7 +294,7 @@ ul.sub-menu {
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	width: 220px;
+	width: 240px;
 	-webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
 	display: none;
@@ -846,6 +846,14 @@ h2.title {
 }
 
 .product-image-wrapper{
+	border:1px solid #F7F7F5;
+	overflow: hidden;
+	margin-bottom:30px;
+}
+
+.product-image-wrapper2{
+  margin-left: 108px;
+  margin-right: 130px;
 	border:1px solid #F7F7F5;
 	overflow: hidden;
 	margin-bottom:30px;
